--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.2",
-    "react-usa-map": "^1.3.0"
+    "react-usa-map": "^1.3.0",
+    "semantic-ui-react": "^0.84.0"
   },
   "scripts": {
     "start": "react-scripts start",
